--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation 'com.google.firebase:firebase-database:19.3.1'
 
+    //Circle image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //Image load
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
